Update Social Impact page layout
- Add multi-column layout to lists for wider width screens

--- a/css/static-main-content.scss
+++ b/css/static-main-content.scss
@@ -78,6 +78,23 @@
     }
   }
 
+  #causes-we-care-about {
+
+    & > div {
+      max-width: 60rem;
+      columns: 24rem 2;
+      gap: 4rem;
+      column-fill: balance;
+    }
+
+    section {
+      display: inline-block;
+      width: 100%;
+      break-inside: avoid;
+    }
+
+  }
+
   // main content / video
   .w-75 {
     max-width: 36em;
