Update gym logo fallback
- Update img src, svg to png

--- a/_includes/partials/test-top.html
+++ b/_includes/partials/test-top.html
@@ -55,7 +55,7 @@
         >Skip to main content</a
       >
       <aside id="system-status" class="system-status hide"></aside>
-      
+
       <header class="global" aria-label="Global Navigation">
         <nav id="primary-nav" class="black-background container-fluid">
           <div class="container">
@@ -119,7 +119,7 @@
                   <a class="navbar-brand" href="{{homelink}}">
                     <img
                       class="gymnasium-logo"
-                      src="{{site.url}}/img/brand/svg/gymnasium-logo-white.svg"
+                      src="{{site.url}}/img/brand/png/gymnasium-logo-white-4x.png"
                       srcset="{{site.url}}/img/brand/svg/gymnasium-logo-white.svg"
                       width="200"
                       height="23"
