--- a/partials/final-exam-modal.html
+++ b/partials/final-exam-modal.html
@@ -319,11 +319,6 @@ if (examActive) {
           certState = 'request';
         }
 
-        // 1st pass is a request, subsequent passes are always an update
-        if (certState === 'request') {
-          updateCertState(courses, courseNum, 'update');
-        }
-
         // define endpoint based on certState
         const endpoint = '/accredible/'+ certState + '_certificate';
 
@@ -338,6 +333,11 @@ if (examActive) {
           data:     {'course_id': window.$$course_id},
           success:  function(data) {
             console.log('[gym] certificate request successful: ', data);
+
+            // 1st successful pass is a request, subsequent passes are always an update
+            if (certState === 'request') {
+              updateCertState(courses, courseNum, 'update');
+            }
           },
           error: function (jqXHR, exception) {
             let msg;
