--- a/css/hero-accessibility.scss
+++ b/css/hero-accessibility.scss
@@ -16,7 +16,7 @@
     padding: 1.75em 30px 3.125em;
   }
 
-  @include breakpoint(medium, max) {
+  @include breakpoint(small, max) {
     &:before {
       display: block;
       content: "";
@@ -27,21 +27,10 @@
       padding-top: 1.875em;
     }
 
-    .container {
-      max-width: 32em;
-    }
   }
 }
 
-@include breakpoint(32em, min) {
-  @include breakpoint(large, max) {
-    .hero-promo-content .description {
-      width: 95%;
-    }
-  }
-}
-
-@include breakpoint(medium, min) {
+@include breakpoint(small, min) {
   .hero-promo {
     .container {
       background-color: #2c2c2c;
@@ -55,7 +44,7 @@
       max-width: 55em;
       min-height: 27em;
 
-      &::after {
+      &:after {
         display: block;
         content: "";
         position: absolute;
@@ -78,9 +67,20 @@
       background-color: $gym-magenta;
     }
   }
+  .hero-promo-content {
+    margin-left: 10.75em;
+  }
+}
 
+@include breakpoint(medium, min) {
   .hero-promo-content {
     margin-left: 12em;
+  }
+}
+
+@include breakpoint(medium, max) {
+  .hero-promo-content .description {
+    width: 95%;
   }
 }
 
