Update announcement styling
- Update nesting
- Add link rulesets

--- a/css/main.scss
+++ b/css/main.scss
@@ -2288,13 +2288,31 @@ TODO: migrate discussion CSS out of theme
     background-color: $gym-white;
     border-bottom: 1px solid $gym-gray;
     padding: 2rem 0;
-  }
 
     p {
       font-size: 1.3225em;
       line-height: inherit;
       margin-bottom: 0;
     }
+
+    a:not([class]) {
+      font: inherit;
+      color: currentColor;
+      text-decoration: none;
+      padding-bottom: 2px;
+      border-bottom: 1px solid currentColor;
+      margin-bottom: -2px;
+
+      &:hover,
+      &:focus,
+      &:active {
+        color: currentColor;
+        text-decoration: none;
+        border-bottom: 2px solid currentColor !important;
+      }
+    }
+
+  }
 
 }
 
