--- a/css/main.scss
+++ b/css/main.scss
@@ -2295,22 +2295,7 @@ TODO: migrate discussion CSS out of theme
       margin-bottom: 0;
     }
 
-    a:not([class]) {
-      font: inherit;
-      color: currentColor;
-      text-decoration: none;
-      padding-bottom: 2px;
-      border-bottom: 1px solid currentColor;
-      margin-bottom: -2px;
-
-      &:hover,
-      &:focus,
-      &:active {
-        color: currentColor;
-        text-decoration: none;
-        border-bottom: 2px solid currentColor !important;
-      }
-    }
+    @include gym-text-links;
 
   }
 
@@ -2373,22 +2358,7 @@ TODO: migrate discussion CSS out of theme
     margin-top: 5px;
   }
 
-  a:not([class]) {
-    font: inherit;
-    color: currentColor;
-    text-decoration: none;
-    padding-bottom: 2px;
-    border-bottom: 1px solid currentColor;
-    margin-bottom: -2px;
-
-    &:hover,
-    &:focus,
-    &:active {
-      color: currentColor;
-      text-decoration: none;
-      border-bottom: 2px solid currentColor !important;
-    }
-  }
+  @include gym-text-links;
 
   & .msg-content {
     @include breakpoint(large, min) {
@@ -2414,22 +2384,7 @@ aside.system-status {
     margin-bottom: 0;
   }
 
-  a:not([class]) {
-    font: inherit;
-    color: currentColor;
-    text-decoration: none;
-    padding-bottom: 2px;
-    border-bottom: 1px solid currentColor;
-    margin-bottom: -2px;
-
-    &:hover,
-    &:focus,
-    &:active {
-      color: currentColor;
-      text-decoration: none;
-      border-bottom: 2px solid currentColor !important;
-    }
-  }
+  @include gym-text-links;
 
 // Ukraine Relief related theme
 
