Updates privacy policy links

--- a/_includes/partials/footer.html
+++ b/_includes/partials/footer.html
@@ -46,7 +46,7 @@
                 <li><a href="/faq">FAQ</a></li>
                 <li><a href="/support">Support</a></li>
                 <li><a href="/social-impact">Social Impact</a></li>
-                <li><a href="/privacy">Privacy Policy</a></li>
+                <li><a href="/privacy-policy">Privacy Policy</a></li>
                 <li><a href="https://aquent.com/csr-policy" target="_blank" rel="noopener">Corporate Social Responsibility</a></li>
                 <li><a href="https://aquent.de/impressum" target="_blank" rel="noopener">Impressum</a></li>
               </ul>
@@ -132,4 +132,4 @@ Add vendor JS file here instead of theme
 <script defer src="{{site.url}}/js/vendor/bootstrap.min.js?{{ site.time | date:'%s' }}"></script>
 <script async defer src="{{site.url}}/js/vendor/jquery.validate.min.js?{{ site.time | date:'%s' }}"></script>
 <script async defer src="{{site.url}}/js/vendor/prism.min.js?{{ site.time | date:'%s' }}"></script>
-<script async defer src="{{site.url}}/js/vendor/cookiebanner.js?{{ site.time | date:'%s' }}" id="cookiebanner" data-link="#f89820" data-message="We use cookies to enhance your experience. By continuing to visit this site you agree to our use of cookies. Find out more about how we use cookies in our" data-linkmsg="Privacy Policy." data-moreinfo="/privacy"></script>
+<script async defer src="{{site.url}}/js/vendor/cookiebanner.js?{{ site.time | date:'%s' }}" id="cookiebanner" data-link="#f89820" data-message="We use cookies to enhance your experience. By continuing to visit this site you agree to our use of cookies. Find out more about how we use cookies in our" data-linkmsg="Privacy Policy." data-moreinfo="/privacy-policy"></script>
