--- a/_layouts/test-home.html
+++ b/_layouts/test-home.html
@@ -623,7 +623,7 @@ Creation Date: 12/02/2015
 							<li><a href="/about">About</a></li>
 							<li><a href="/faq">FAQ</a></li>
 							<li><a href="/support">Support</a></li>
-							<li><a href="/privacy">Privacy Policy</a></li>
+							<li><a href="/privacy-policy">Privacy Policy</a></li>
 						</ol>
 						<div class="copyright">
 							&copy; 2018 Aquent Gymnasium
