--- a/_layouts/test-home.html
+++ b/_layouts/test-home.html
@@ -76,7 +76,7 @@
 	</script>
 	<script src="https://thegymnasium.com/gymnasium/js/prism.19f6a94bf245.js">
 	</script>
-	<script src="https://thegymnasium.com/gymnasium/js/cookiebanner.1f4136cf4977.js" id="cookiebanner" data-link="#f89820" data-message="We use cookies to enhance your experience. By continuing to visit this site you agree to our use of cookies. Find out more about how we use cookies in our" data-linkmsg="Privacy Policy." data-moreinfo="/privacy">
+	<script src="https://thegymnasium.com/gymnasium/js/cookiebanner.1f4136cf4977.js" id="cookiebanner" data-link="#f89820" data-message="We use cookies to enhance your experience. By continuing to visit this site you agree to our use of cookies. Find out more about how we use cookies in our" data-linkmsg="Privacy Policy." data-moreinfo="/privacy-policy">
 	</script>
 	<script>
 		var CLOUDWALL_ENV = "my";
