Use deploy preview URLs
https://deploy-preview-772--thegymcms.netlify.app/

--- a/css/migrated-vendor.scss
+++ b/css/migrated-vendor.scss
@@ -13,16 +13,16 @@
  * -------------------------- */
 @font-face {
   font-family: "FontAwesome";
-  src: url("/static/fonts/vendor/fontawesome-webfont.25a32416abee.eot?v=4.6.3");
-  src: url("/static/fonts/vendor/fontawesome-webfont.25a32416abee.eot?#iefix&v=4.6.3")
+  src: url("https://deploy-preview-772--thegymcms.netlify.app/fonts/fontawesome-webfont.eot?v=4.6.3");
+  src: url("https://deploy-preview-772--thegymcms.netlify.app/fonts/fontawesome-webfont.eot?#iefix&v=4.6.3")
       format("embedded-opentype"),
-    url("/static/fonts/vendor/fontawesome-webfont.e6cf7c6ec7c2.woff2?v=4.6.3")
+    url("https://deploy-preview-772--thegymcms.netlify.app/fonts/fontawesome-webfont.woff2?v=4.6.3")
       format("woff2"),
-    url("/static/fonts/vendor/fontawesome-webfont.c8ddf1e5e5bf.woff?v=4.6.3")
+    url("https://deploy-preview-772--thegymcms.netlify.app/fonts/fontawesome-webfont.woff?v=4.6.3")
       format("woff"),
-    url("/static/fonts/vendor/fontawesome-webfont.1dc35d25e61d.ttf?v=4.6.3")
+    url("https://deploy-preview-772--thegymcms.netlify.app/fonts/fontawesome-webfont.ttf?v=4.6.3")
       format("truetype"),
-    url("/static/fonts/vendor/fontawesome-webfont.d7c639084f68.svg?v=4.6.3#fontawesomeregular")
+    url("https://deploy-preview-772--thegymcms.netlify.app/fonts/fontawesome-webfont.svg?v=4.6.3#fontawesomeregular")
       format("svg");
   font-weight: normal;
   font-style: normal;
