Update test layouts and partials
- Update indentation, tabs to spaces
- Update title text

--- a/_includes/partials/test-top.html
+++ b/_includes/partials/test-top.html
@@ -11,7 +11,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Free online courses on design and web development | Gymnasium</title>
+    <title>Free online courses on design and development | Gymnasium</title>
 
     <link
       rel="icon"
