--- a/css/main.scss
+++ b/css/main.scss
@@ -3,7 +3,16 @@
 @import "functions";
 @import "mixins";
 @import "variables";
+@import "typography";
 
+// Render font face rules
+@include font-open-sans; // TODO: seems to be an unnecessary font
+@include font-brandon;
+@include font-font-awesome; // TODO: are we using this?
+
+// TODO: clean these up to the best of our ability
+@import "migrated-vendor";
+@import "migrated-main";
 
 /* --- BEGIN: Migrated from gymnasium.scss in the open edx theme --- */
 /* negate a silly style rule inherited from the platform */
