Update card content and layout
- Add short description
- Update font-size
- Update spacing

--- a/css/take5.scss
+++ b/css/take5.scss
@@ -641,8 +641,12 @@ details.take5--transcript {
       }
 
       header {
-        padding: 1em;
+        padding: 1em 0.5em;
         margin-top: 0;
+
+        p {
+          font-size: 0.9625em;
+        }
       }
     }
 
