--- a/_includes/take5/catalog-topic-group.html
+++ b/_includes/take5/catalog-topic-group.html
@@ -28,6 +28,7 @@
           <h3 class="all-caps">
             <a href="{{ item.title | slugify | prepend: base_path }}">{{ item.title }}</a>
           </h3>
+          <p>{{ item.short_description }}</p>
         </header>
       </article>
     </li>
