--- a/_includes/take5/catalog-topic-group.html
+++ b/_includes/take5/catalog-topic-group.html
@@ -30,6 +30,11 @@
           </h3>
           <p>{{ item.short_description }}</p>
         </header>
+        <div class="cta cta-left">
+          <a class="gym-button" href="{{ item.title | slugify | prepend: base_path }}">
+            <b>Watch Tutorial</b>
+          </a>
+        </div>
       </article>
     </li>
 
