Start fixes partial

--- a/_sass/_migrated-main.scss
+++ b/_sass/_migrated-main.scss
@@ -44164,3 +44164,7 @@ pre[class*="language-"][data-language]::before {
   padding: 0 0.5em;
   text-shadow: none;
 }
+
+
+// Add fixes
+@import "migrated-fixes";
