Fix typo, unused fonts

--- a/_sass/_migrated-fixes.scss
+++ b/_sass/_migrated-fixes.scss
@@ -41,7 +41,7 @@
     cursor: pointer;
     color: #313131;
     font: italic 300 1rem/1.6rem "Helvetica Neue",Helvetica,Arial,sans-serif;
-    text-shadow: 0 1px rgb(255 255 255 / 40%);
+    text-shadow: 0 1px rgba(255, 255, 255, 0.4);
     -webkit-font-smoothing: antialiased;
     margin-right: 10px;
     display: inline-block;
@@ -80,4 +80,11 @@
 
 .course-tabs {
   padding: 0;
+  font-weight: normal;
+  margin-left: 0;
+
+  .tab {
+    display: inline-block;
+    list-style: none;
+  }
 }
