--- a/_sass/_migrated-fixes.scss
+++ b/_sass/_migrated-fixes.scss
@@ -58,7 +58,6 @@
   display: none;
 }
 
-
 // Courseware Tab Navigation
 .wrapper-course-material {
   margin: 0 15px;
@@ -84,7 +83,7 @@
   }
 
   a {
-    padding: 10px 15px 13px 15px;
+    padding: 10px 15px 13px 0;
     border-bottom: none;
     color: currentColor;
     display: block;
@@ -126,3 +125,91 @@
   }
 }
 
+// Course Accordion Nav
+.course-index {
+  .accordion {
+    font-family: $gym-font-stack;
+    background-color: #444;
+
+    .course-navigation {
+      .group-heading {
+        font-family: $gym-font-stack;
+
+        &.active .icon.fa {
+          color: #f89820;
+        }
+      }
+
+      .chapter-content-container {
+        background-color: inherit;
+
+        .chapter-menu {
+          padding-left: 30px;
+
+          .menu-item {
+            &.active {
+              a {
+                color: #f89820;
+              }
+            }
+
+            .accordion-nav {
+              h1, h2, h3, h4, h5, h6, p {
+                font-family: $gym-font-stack;
+              }
+            }
+
+            a {
+              color: #ebebeb;
+              background: inherit;
+              border: none;
+            }
+            
+            .subtitle {
+              display: none;
+            }
+          }
+        }
+      }
+
+      .button-chapter.active .group-heading {
+        color: #ebebeb;
+      }
+
+      p.subtitle {
+        display: none;
+      }
+    }
+
+    ul.ui-accordion-content a p {
+      color: #ebebeb;
+    }
+    ul.ui-accordion-content li.active a p {
+      color: #f89820;
+      font-weight: bold;
+    }
+    .chapter {
+      color: #ebebeb;
+      background: none;
+      box-shadow: none;
+      padding: 0;
+      h3 {
+        line-height: 1.3;
+      }
+      a {
+        font-weight: 900;
+        letter-spacing: 0.04em;
+        word-spacing: 0.04em;
+        color: #ebebeb;
+        background: none;
+        box-shadow: none;
+        text-shadow: none;
+        border: none;
+        margin-bottom: 0.3em;
+        p {
+          font-size: 1.2em;
+        }
+      }
+    }
+  }
+}
