--- a/_sass/_migrated-vendor.scss
+++ b/_sass/_migrated-vendor.scss
@@ -1,14 +1,14 @@
 @import 'variables';
 @import 'functions';
 
-// .fa {
-//   display: inline-block;
-//   font: normal normal normal 14px/1 FontAwesome;
-//   font-size: inherit;
-//   text-rendering: auto;
-//   -webkit-font-smoothing: antialiased;
-//   -moz-osx-font-smoothing: grayscale;
-// }
+.fa {
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: inherit;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 // /* makes the font 33% larger relative to the icon container */
 // .fa-lg {
 //   font-size: 1.33333333em;
@@ -770,9 +770,9 @@
 // .fa-caret-left:before {
 //   content: "\f0d9";
 // }
-// .fa-caret-right:before {
-//   content: "\f0da";
-// }
+.fa-caret-right:before {
+  content: "\f0da";
+}
 // .fa-columns:before {
 //   content: "\f0db";
 // }
