--- a/_sass/_migrated-vendor.scss
+++ b/_sass/_migrated-vendor.scss
@@ -761,9 +761,9 @@
 // .fa-money:before {
 //   content: "\f0d6";
 // }
-// .fa-caret-down:before {
-//   content: "\f0d7";
-// }
+.fa-caret-down:before {
+  content: "\f0d7";
+}
 // .fa-caret-up:before {
 //   content: "\f0d8";
 // }
